<resources>
    <string name="app_name">Superuser</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="superuser">Superuser</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="status_incoming">Incoming Superuser Request\u2026</string>
    <string name="unknown_uid">Unknown UID: %s</string>
    <string name="application_request">%s is requesting Superuser access.</string>
    <string name="info">Warning: If you do not understand this, you should deny the request.</string>
    <string name="request">Superuser Request</string>
    <string name="package_header">Package:</string>
    <string name="app_header">App:</string>
    <string name="uid_header">Requested UID:</string>
    <string name="command_header">Command:</string>
    <string name="this_time_only">This time only</string>
    <string name="remember_for">Remember choice for %s minutes</string>
    <string name="remember_forever">Remember choice forever</string>
    <string name="interactive">Interactive</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="no_logs">No Logs</string>
    <string name="no_apps">There are currently no Superuser app policies</string>
    <string name="logging">Logging</string>
    <string name="logging_summary">Enable all Superuser request logging</string>
    <string name="pin_protection">PIN Protection</string>
    <string name="pin_protection_summary">Require entry of a PIN to approve Superuser requests</string>
    <string name="request_timeout">Request Timeout</string>
    <string name="request_timeout_summary">Superuser requests will time out and be denied after %s seconds</string>
    <string name="notifications">Notifications</string>
    <string name="none">None</string>
    <string name="notifications_summary">A %s will be shown when an app is granted or denied Superuser permissions</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="enter_new_pin">Enter New PIN</string>
    <string name="incorrect_pin">Incorrect PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="pin_mismatch">PIN did not match</string>
    <string name="pin_set">Superuser PIN protection enabled</string>
    <string name="number_seconds">%s seconds</string>
    <string name="superuser_granted">Superuser granted to %s</string>
    <string name="superuser_denied">Superuser denied to %s</string>
    <string name="toast">Toast</string>
    <string name="notification">Notification</string>
    <string name="no_notification">No notification will be shown</string>
    <string name="superuser_description">full permissions to all device features and storage</string>
    <string name="superuser_description_more">Superuser grants full access to all device features and storage, including the secure and sensitive hardware elements of your device. This permission is potentially dangerous.</string>
    <string name="automatic_response">Automatic Response</string>
    <string name="prompt">Prompt</string>
    <string name="automatic_response_allow_summary">Automatically allow new requests</string>
    <string name="automatic_response_deny_summary">Automatically deny new requests</string>
    <string name="automatic_response_prompt_summary">Show confirmation dialog for new requests</string>
    <string name="security">Security</string>
    <string name="multiuser_policy">Multiuser Policy</string>
    <string name="multiuser_owner_only_summary">Only the device owner can request Superuser</string>
    <string name="multiuser_owner_managed_summary">The device owner will be prompted when another user requests Superuser</string>
    <string name="multiuser_user_summary">All users can request Superuser</string>
    <string name="multiuser_owner_only">Owner Only</string>
    <string name="multiuser_owner_managed">Owner Managed</string>
    <string name="multiuser_user">All Users</string>
    <string name="multiuser_require_owner">The Multiuser Policy can only be managed by the device owner.</string>
    <string name="owner_login_info">Please switch to the owner account to approve or deny this request.</string>
    <string name="all_commands">All Commands</string>
    <string name="about">About</string>
    <string name="apps">Apps</string>
    <string name="installing">Installing</string>
    <string name="installing_superuser">Installing Superuser\u2026</string>
    <string name="install_superuser">Install Superuser</string>
    <string name="install_superuser_info">The Superuser binary (su) must be updated.\n\nPlease choose an installation method.\nRecovery mode installation is recommended for HTC devices.</string>
    <string name="recovery_install">Recovery Install</string>
    <string name="install">Install</string>
    <string name="checking_superuser">Checking Superuser\u2026</string>
    <string name="install_error">There was an error installing Superuser. Please send a log of the error to the developer.</string>
    <string name="install_success">Installation of Superuser was successful.</string>
    <string name="su_binary_outdated">The su binary is out of date.</string>
    <string name="superuser_access">Superuser Access</string>
    <string name="access_disabled">Disabled</string>
    <string name="apps_only">Apps only</string>
    <string name="adb_only">ADB only</string>
    <string name="apps_and_adb">Apps and ADB</string>
    <string name="whats_new">What\'s New</string>
    <string name="rate">Rate</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="pin_disabled">Superuser PIN protection disabled</string>
    <string name="revoke_permission">Revoke Superuser permission</string>
    <string name="details">Details</string>
    <string name="db_delete_error">Superuser permission cannot be revoked from this app.\nPlease restart the Superuser app and try again.</string>
    <string name="bind_info">This application wants to overwrite the following system file:</string>

    <!-- 2.0 -->
    <string name="clear">Clear</string>
    <string name="once">Once</string>
    <string name="forever">Forever</string>
    <string name="remember_minutes">%s mins.</string> <!-- Try to keep this short as possible. The layout might look a bit weird otherwise -->
    <string name="superuser_request">Superuser Request</string>
    <string name="request_warning">Deny if you\'re not sure!</string>
    <string name="empty_allowed">No apps allowed at the moment</string>
    <string name="empty_denied">No apps denied at the moment</string>
    <string name="allowed">Allowed</string>
    <string name="denied">Denied</string>
    <string name="enabled">Enabled</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before">Two days ago</string>
    <string name="base_theme">Base</string>
    <string name="black">"Black</string>
    <string name="primary_color">Primary color</string>
    <string name="toolbar_text">Toolbar text</string>
    <string name="tab_indicator">Tab indicator</string>
    <string name="accent_color">Accent color</string>
    <string name="counter_back">Counter background</string>
    <string name="counter_text">Counter text</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="grid_size">Grid Size</string>
    <string name="grid_mode">Grid mode</string>
    <string name="list_mode">List mode</string>
    <string name="revoke">Revoke</string>
    <string name="confirmation">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="smart_mode">Smart Mode</string>
    <string name="smart_mode_summary">Show a toast when the screen is in use and a notification when it\'s off</string>
    <string name="pref_confirmation">Confirmation</string>
    <string name="behavior">Behavior</string>
    <string name="pref_interface">Interface</string>
    <string name="pref_confirmation_summary">Ask for confirmation before approving Superuser request</string>
    <string name="restrict_noti">Restrict notifications</string>
    <string name="restrict_noti_summary">Notify only when Superuser access is denied</string>
    <string name="ellipsize">Ellipsize app name</string>
    <string name="note">Note</string>
    <string name="pin_warning">PIN is only meant to prevent your drunk self or mischievous sibling/kid from making unintended changes.\nIt is not secure enough to protect against a seasoned intruder!</string>
    <string name="understand">I understand</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="hide_launcher">Hide launcher icon</string>
    <string name="enable_superuser">Enable Superuser</string>
    <string name="disable_superuser">Disable Superuser</string>
    <string name="already_s">Already %s</string>

</resources>
