<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:fontFamily="sans-serif-medium"
                android:textAllCaps="true"
                android:text="@string/theme"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/theme_base"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:background="?selectableItemBackground">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="?textColorListItemPrimary"
                        android:text="@string/base_theme"/>

                    <TextView
                        android:id="@+id/theme_current"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textColor="?textColorListItemPrimary"
                        android:text="@string/light"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/list_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:visibility="gone">

                    <include
                        android:id="@+id/theme_black"
                        layout="@layout/nav_item_theme"/>

                    <include
                        android:id="@+id/theme_dark"
                        layout="@layout/nav_item_theme" />

                    <include
                        android:id="@+id/theme_light"
                        layout="@layout/nav_item_theme" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/theme_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="?selectableItemBackground">

                    <include
                        android:id="@+id/primary_color"
                        layout="@layout/nav_item_color"/>

                    <include
                        android:id="@+id/toolbar_text"
                        layout="@layout/nav_item_color"/>

                    <include
                        android:id="@+id/tab_indicator"
                        layout="@layout/nav_item_color"/>

                    <include
                        android:id="@+id/accent"
                        layout="@layout/nav_item_color"/>

                    <include
                        android:id="@+id/counter_back"
                        layout="@layout/nav_item_color"/>

                    <include
                        android:id="@+id/counter_text"
                        layout="@layout/nav_item_color"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:listDivider" />
        <LinearLayout
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2.5dp"
            android:paddingTop="12.5dp"
            android:paddingBottom="12.5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:clickable="true"
            android:background="?selectableItemBackground">

            <ImageView
                android:layout_width="22.5dp"
                android:layout_height="22.5dp"
                android:layout_marginLeft="12.5dp"
                android:layout_marginRight="12.5dp"
                app:srcCompat="@drawable/ic_about"
                android:tint="?iconTint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?textColorListItemPrimary"
                android:text="@string/about"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12.5dp"
            android:paddingBottom="12.5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:clickable="true"
            android:background="?selectableItemBackground">

            <ImageView
                android:layout_width="22.5dp"
                android:layout_height="22.5dp"
                android:layout_marginLeft="12.5dp"
                android:layout_marginRight="12.5dp"
                app:srcCompat="@drawable/ic_settings"
                android:tint="?iconTint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_gravity="center_vertical"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="?textColorListItemPrimary"
                android:text="@string/settings"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>