<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:background="?pagerBackground"
    tools:context=".RequestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/request"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="?colorAccent"
                android:text="@string/superuser_request" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp">

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:popupBackground="?pagerBackground"
                        android:prompt="@string/once"/>

                    <ImageView
                        android:id="@+id/spinner_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="?selectableItemBackgroundBorderless"
                        app:srcCompat="@drawable/ic_arrow_drop_down"
                        android:tint="?iconTint"/>
                </LinearLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/allow"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_gravity="center_horizontal"
                    android:stateListAnimator="@null"
                    android:enabled="false"
                    android:filterTouchesWhenObscured="true"
                    android:maxLines="1"
                    android:text="@string/allow" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/deny"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_marginTop="2.5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center_horizontal"
                    android:stateListAnimator="@null"
                    android:maxLines="1"
                    android:text="@string/deny" />

                <!--<android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="Cancel"/>-->
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/buttons"
                android:layout_toStartOf="@id/buttons"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:drawableLeft="@drawable/ic_warning"
                    android:drawableStart="@drawable/ic_warning"
                    android:drawablePadding="4dp"
                    android:textColor="?android:textColorSecondary"
                    android:textSize="14sp"
                    android:text="@string/request_warning"/>

                <ScrollView
                    android:layout_above="@id/warning"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/ready"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        android:visibility="gone" >

                        <LinearLayout
                            android:id="@+id/packageinfo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:orientation="horizontal" >

                            <ImageView
                                android:id="@+id/image"
                                android:layout_width="48dp"
                                android:layout_height="48dp"
                                android:layout_marginLeft="4dp"
                                android:layout_marginRight="4dp"
                                android:scaleType="fitCenter" >
                            </ImageView>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/title"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="3dp"
                                    android:layout_marginRight="3dp"
                                    android:maxLines="1"
                                    android:ellipsize="end"
                                    android:textSize="16sp"
                                    android:textColor="?android:textColorPrimary"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                                <TextView
                                    android:id="@+id/summary"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="3dp"
                                    android:layout_marginRight="3dp"
                                    android:maxLines="1"
                                    android:ellipsize="end"
                                    android:textColor="?android:textColorSecondary"
                                    android:textSize="13.75sp"/>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/uid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="6.5dp"
                            android:layout_marginRight="6.5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:maxLines="1"
                                android:textColor="?android:textColorSecondary"
                                android:textSize="14sp"
                                android:text="@string/uid_header" />

                            <TextView
                                android:id="@+id/uid_header"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?android:textColorPrimary"
                                android:maxLines="1"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/command"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginLeft="6.5dp"
                            android:layout_marginRight="6.5dp"
                            android:layout_marginBottom="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="4dp"
                                android:paddingRight="4dp"
                                android:maxLines="1"
                                android:textColor="?android:textColorSecondary"
                                android:textSize="14sp"
                                android:text="@string/command_header" />

                            <TextView
                                android:id="@+id/command_header"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="?android:textColorPrimary"
                                android:maxLines="1"
                                android:textSize="14sp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/bind"
                            android:orientation="vertical"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:paddingLeft="10dp"
                            android:paddingStart="10dp"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13.75sp"
                                android:textColor="?android:textColorSecondary"
                                android:text="@string/bind_info" />

                            <TextView
                                android:id="@+id/bind_to"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="13.75sp"
                                android:textColor="?android:textColorPrimary"/>
                        </LinearLayout>

                        <TextView
                            android:id="@+id/unknown"
                            style="@android:style/TextAppearance.Medium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center" />
                    </LinearLayout>
                </ScrollView>

            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
